--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <title>Heartcore</title>
 <head>
-<center><font color="red"><font size="20">Guten Tag!</font></font></center>
+<center><font color="blue"><font size="26">Guten Tag!</font></font></center>
 </head>
 <body>
-<body bgcolor="black">
+<body bgcolor="pink">
 </body>
